# catamara

devel/: .catkin  .rosinstall  setup.sh
devel/include/cat_arch/: Setpoints.h
devel/include/evologics_ros_sync/: EvologicsChannelDiagnostics.h  EvologicsSyncDiagnostics.h  EvologicsUsbllong.h
devel/include/ros_arduino_msgs/: Analog.h  AnalogFloat.h  AnalogWriteRequest.h  AnalogWriteResponse.h  Digital.h  DigitalSetDirectionRequest.h  DigitalSetDirectionResponse.h  DigitalWriteRequest.h  DigitalWriteResponse.h  SensorState.h  ServoReadRequest.h  ServoReadResponse.h  ServoWriteRequest.h  ServoWriteResponse.h
devel/lib/pkgconfig/: cat_arch.pc  emlid_reach_tcp.pc  evologics_ros_sync.pc  ros_arduino_firmware.pc  ros_arduino_msgs.pc  ros_arduino_python.pc  usbl_position.pc
devel/lib/usbl_position/: geo2ned  plot_marker  plot_path  traj2bag  usbl_analysis  usbl_position  usbl_projection
devel/share/cat_arch/cmake/: cat_arch-msg-extras.cmake  cat_arch-msg-paths.cmake  cat_archConfig.cmake
devel/share/emlid_reach_tcp/cmake/: emlid_reach_tcpConfig.cmake
devel/share/evologics_ros_sync/cmake/: evologics_ros_sync-msg-extras.cmake  evologics_ros_sync-msg-paths.cmake  evologics_ros_syncConfig.cmake
devel/share/ros_arduino_firmware/cmake/: ros_arduino_firmwareConfig.cmake
src/: simulation.launch
src/cat_arch/: CMakeLists.txt
src/cat_arch/launch/: teleoperation.launch
src/cat_arch/src/simulation/: robot_dynamics.py  robot_dynamics.yaml
src/cat_arch/src/teleoperation/: arduino_node.py  joystick_base.py  joytosetpoints.py  logitech_joy.py
(+45 files in other folders)
